# isolf

./: Cargo.toml
data/: apl.csv  ff.json
data/ff/: angle.csv  bond.csv  charge.csv  hp.csv  lj.csv  mass.csv  wca.csv
src/: csv.rs  error.rs  inp.rs  itp.rs  lib.rs  main.rs
src/inp/: boundary.rs  builder.rs  ensemble.rs  inp_file.rs  mod.rs  output.rs
src/itp/: angle.rs  atom.rs  atom_type.rs  bond.rs  cg_lj_parameter.rs  cg_wca_parameter.rs  force_field.rs  itp_file.rs  mod.rs  molecule.rs  molecule_type.rs
