[package]
name = "isolf"
version = "0.1.0"
edition = "2024"
description = "A rust library for setting up CG MD simulations using the iSoLF model"
license = "GPL-3.0-or-later"
repository = "https://github.com/bondrewd/isolf"
readme = "README.md"
keywords = ["cli", "automation", "isolf", "md", "simulation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
colored = "3.0.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
